--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
@@ -17,7 +18,8 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-timeline-listview": "^0.2.3"
+    "react-native-timeline-listview": "^0.2.3",
+    "react-string-format": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
