--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -16,10 +16,14 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-timeline-flatlist": "^0.8.0",
     "react-native-timeline-listview": "^0.2.3",
-    "react-string-format": "^1.0.1"
+    "react-string-format": "^1.0.1",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
