--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.2.0",
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
@@ -16,11 +18,11 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-progress": "^5.0.0",
     "react-native-floating-action": "^1.22.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "^13.8.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-timeline-listview": "^0.2.3",
     "react-string-format": "^1.0.1",
