--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jquery": "^3.6.3",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-floating-action": "^1.22.0",
