--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
