--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -22,6 +22,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-floating-action": "^1.22.0",
+    "react-native-form-component": "^2.6.8",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
